--- a/ProjectApp/src/app/app.component.html
+++ b/ProjectApp/src/app/app.component.html
@@ -2,8 +2,9 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-        <app-recipes *ngIf="loadFlag === 'recipe'"></app-recipes>
-        <app-shopping-list *ngIf="loadFlag === 'shopping'"></app-shopping-list>
+        <!-- <app-recipes *ngIf="loadFlag === 'recipe'"></app-recipes>
+        <app-shopping-list *ngIf="loadFlag === 'shopping'"></app-shopping-list> -->
+        <router-outlet></router-outlet>
     </div>
   </div>
 </div>
