--- a/ProjectApp/src/app/recipes/recipes-details/recipes-details.component.html
+++ b/ProjectApp/src/app/recipes/recipes-details/recipes-details.component.html
@@ -18,8 +18,8 @@
       </button> 
       <ul class="dropdown-menu" >
         <li><a (click)="addToCart()" style="cursor: pointer;">To Shopping List</a></li>
-        <li><a href="#">Edit Recipe</a></li>
-        <li><a href="#">Delete Recipe List</a></li>
+        <li><a style="cursor: pointer" (click)="onEditRecipe()">Edit Recipe</a></li>
+        <li><a style="cursor: pointer">Delete Recipe List</a></li>
       </ul>
     </div>
   </div>
