--- a/ProjectApp/src/app/recipes/recipes-list/recipes-list.component.html
+++ b/ProjectApp/src/app/recipes/recipes-list/recipes-list.component.html
@@ -1,13 +1,13 @@
 
 <div class="row">
   <div class="col-xs-12">
-    <button class="btn btn-success">New Recipe</button>
+    <button class="btn btn-success" (click)="onNewRecipe()">New Recipe</button>
   </div>
 </div>
 <hr>
 <div class="row">
   <div class="col-cs-12">
-      <app-recipes-item *ngFor="let item of recipes" [recipe]="item"
+      <app-recipes-item *ngFor="let item of recipes; let i = index" [recipe]="item" [index]="i"
       ></app-recipes-item>
   </div>
 </div>
