--- a/ProjectApp/src/app/recipes/recipes-details/recipes-details.component.html
+++ b/ProjectApp/src/app/recipes/recipes-details/recipes-details.component.html
@@ -19,7 +19,7 @@
       <ul class="dropdown-menu" >
         <li><a (click)="addToCart()" style="cursor: pointer;">To Shopping List</a></li>
         <li><a style="cursor: pointer" (click)="onEditRecipe()">Edit Recipe</a></li>
-        <li><a style="cursor: pointer">Delete Recipe List</a></li>
+        <li><a style="cursor: pointer" (click)="onDeleteRecipe()">Delete Recipe List</a></li>
       </ul>
     </div>
   </div>
