--- a/ProjectApp/src/app/shopping-list/shopping-list.component.html
+++ b/ProjectApp/src/app/shopping-list/shopping-list.component.html
@@ -4,7 +4,8 @@
     <hr>
     <ul class="list-group">
       <a class="list-group-item" style="cursor: pointer;"
-      *ngFor="let item of ingredients"
+      *ngFor="let item of ingredients; let i = index"
+      (click)="onEditItem(i)"
       >
       {{item.name}} ({{item.amount}})
       </a>
