--- a/ProjectApp/src/app/recipes/recipes-details/recipes-details.component.html
+++ b/ProjectApp/src/app/recipes/recipes-details/recipes-details.component.html
@@ -1,12 +1,12 @@
 <div class="row">
   <div class="col-xs-12">
-    <img [src]="recipe.imagePath" alt="" class="img-responsive">
+    <img [src]="(recipeState | async).recipes[id].imagePath" alt="" class="img-responsive">
   </div>
 </div>
 
 <div class="row">
   <div class="col-xs-12">
-    <h1>{{recipe.name}}</h1>
+    <h1>{{(recipeState | async).recipes[id].name}}</h1>
   </div>
 </div>
 
@@ -27,7 +27,7 @@
 
 <div class="row">
   <div class="col-xs-12">
-    {{recipe.description}}
+    {{(recipeState | async).recipes[id].description}}
   </div>
 </div>
 
@@ -35,7 +35,7 @@
 <div class="row">
   <div class="col-xs-12">
     <ul class="list-group">
-      <li class="list-group-item" *ngFor="let item of recipe.ingredients">
+      <li class="list-group-item" *ngFor="let item of (recipeState | async).recipes[id].ingredients">
         {{item.name}} - {{item.amount}}
       </li>
     </ul>
